Version 0.3.1Ad4

- Fixed post-dated transfers propagation.
- NSLBALANCE protocol available. (returns address available)
- New seed node: 107.172.193.176
- New seed node: 107.175.194.151
- New seed node: 192.210.226.118
- Removed old seed nodes.
- Added GetWebSeedNodes.
- Removed unit Poolmanage.

Version 0.3.1Ad3

- Official release

Version 0.3.1Ad2

- Fixed netrate calculation.
- Fixed error using a different MN port.
- MN_IP auto modified when auto is selected.

Version 0.3.1Ad1

- Auto MNs IP assign.
- Slots array is thread safe.
- Removed all TFILESTREAM and FINALLY.
- Node test improved.
- Master node earnings report implemented.
- Node Context.data assigned including the slot number.
- Code cleaned.
- Mainform size and position saved.

Version 0.3.0Aa6

- MNs reports creation and propagation.

Version 0.3.0Aa5

- Nethashrate function&command implemented.
- Datapanel: target deprecated.
- ** BlockHeader.difficult is now PoS addresses paid.
- ** BlockHeader.NextBlkDiff is now MNs addresses paid.
- Command "sumary" improved.
- All pool relative commands deprecated.
- Updated mainmenu.
- Removed Form pool.
- Protocol "$NEWBL" deprecated.
- Improved function "ShowBlchHead".
- Improved network synchronization.
- Fixed "MINE" ammount on user transaction history.
- Added MyConStatus=3 filter to build new blocks
- Implemented besthash tracking and update.
- Developed IsAllSynced function.
- Download headers protocol improved.

Up to Version 0.3.0Aa4

- Protocol 2 mining system implemented.

Version 0.2.1Lb3

- New minning system.

Version 0.2.1Lb2

- Fixing pool payment system.
- Do not add to crypto array transactions already pending.
- Command "addnode" deprecated.
- Command "delnode" deprecated.
- Protocol "$NODES" deprecated.
- Implemented ThSa GetPendingCount.
- Implemented ThSa ClearAllPending.
- Undone server info catch system.
- Improved client close procedure.
- Added Russian language.
- New certificate method.

Version 0.2.1Lb1

- Official release.
