@@ -334,7 +334,7 @@ if U_PoSGrid then
    End;
 
 form1.DataPanel.Cells[3,0]:=Copy(GetNMSData.Miner,1,10)+'...';
-form1.DataPanel.Cells[3,1]:=Copy(GetNMSData.Diff,1,10);
+form1.DataPanel.Cells[3,1]:=BestHashReadeable(GetNMSData.Diff);
 form1.DataPanel.Cells[3,2]:='';
 form1.DataPanel.Cells[3,3]:=Int2curr(GetBlockReward(Mylastblock+1));
 form1.DataPanel.Cells[3,4]:='('+IntToStr(Lastblockdata.TimeLast20)+') '+BlockAge.ToString;
